@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 TinyMCE 4.1.0
 ====================================
+- Fixed issues with context support of thumbnails and relative paths
 - Fixed issues with language overriding
 - Added theme_advanced_blockformats system setting
 - Fixed bugs with width of tinymce in panels
